@@ -401,3 +401,4 @@ Version 0.0.1:
 395/ Optimize world generation task "Create_Biome" and other such task.
 396/ Deleted Test Teleporter debug item, Artifact debug item.
 397/ Added a pos marker for trial, structure and such.
+398/ Added alt click attack for Annihiliation.
